# mcp-ai-assistant

./: .env.example  .gitignore  Dockerfile  README.md  improve.txt  pyproject.toml
assistant/: __init__.py  config.py  main.py  runtime_context.py
assistant/agent/: blackboard.py  contacts_db.py  core.py  db.py  db_contacts.py  db_core.py  db_knowledge.py  db_memory.py  db_misc.py  db_workflow.py  github_checker.py  memory.py  news_checker.py  planner.py  rag.py  reflection.py  reminder_checker.py  router.py  site_checker.py  tool_adapters.py  tool_hydrators.py  tool_policies.py  workflow_runner.py
assistant/llm/: __init__.py  deepseek.py  model_pool.py
assistant/mcp/: __init__.py  client.py  server.py
assistant/skills/: __init__.py  base.py  browser_skill.py  calc_skill.py  code_skill.py  contacts_skill.py  document_skill.py  express_skill.py  file_skill.py  github_skill.py  group_ops_skill.py  knowledge_skill.py  location_skill.py  monitor_skill.py  music_skill.py  news_skill.py  note_skill.py  qq_skill.py  recruitment_skill.py  reminder_skill.py  rule_skill.py  search_skill.py  sql_skill.py  techtrend_skill.py  time_skill.py  translate_skill.py  vision_skill.py  weather_skill.py  workflow_skill.py  (+1 more)
tests/: test_blackboard_integration.py  test_group_ops_skill.py  test_memory_sanitization.py  test_model_pool.py  test_planner_metadata.py  test_recruitment_skill.py  test_router_metadata.py  test_runtime_context.py  test_skill_enhancements.py  test_tool_adapters.py  test_tool_hydrators.py  test_tool_policies.py  test_tool_result_codec.py  test_workflow_runner.py
(+4 files in other folders)
